--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 #App Config
-#Tue Jun 03 16:05:42 IRST 2025
-installed_versions=1.21.4
+#Tue Jun 03 22:17:24 IRST 2025
+installed_versions=
 username=mei
 version=1.21.4
