before removing explicit install marks

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 #App Config
-#Tue Jun 03 22:17:24 IRST 2025
-installed_versions=
+#Tue Jun 03 22:47:37 IRST 2025
+installed_versions=1.21.4,1.21.1
 username=mei
 version=1.21.4
