--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 #App Config
-#Tue Jun 03 23:52:54 IRST 2025
+#Wed Jun 04 01:22:02 IRST 2025
+heap_size=1G
 username=mei
-version=1.21.4
+version=1.21.5
